versioned_docs/version-2026.1.1/professor/cosme_oliveira_da_silva.mdx
---
sidebar_label: 'Cosme Oliveira da Silva'
---

import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Cosme Oliveira da Silva",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Química III - 1243",
          "size": 2,
          "teachers": [
            "Cosme Oliveira da Silva"
          ],
          "classroom": "laboratorio_de_informatica_a",
          "students": [
            "IIW2024A"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Química II - 1230",
          "size": 2,
          "teachers": [
            "Cosme Oliveira da Silva"
          ],
          "classroom": "sala_9-2",
          "students": [
            "IIW2025A"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Química I - 2326",
          "size": 2,
          "teachers": [
            "Cosme Oliveira da Silva"
          ],
          "classroom": "sala_3-1",
          "students": [
            "COM2026"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Química I - 1068",
          "size": 2,
          "teachers": [
            "Cosme Oliveira da Silva"
          ],
          "classroom": "sala_16-2",
          "students": [
            "IIW2026A"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        },
        {
          "subject": "Métodos analíticos - 2379",
          "size": 2,
          "teachers": [
            "Cosme Oliveira da Silva"
          ],
          "classroom": "sala_16-2",
          "students": [
            "TAL2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "QUÍMICA I (500)",
          "size": 1,
          "teachers": [
            "Cosme Oliveira da Silva"
          ],
          "classroom": "a_definir",
          "students": [
            "AGO2025-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Cosme Oliveira da Silva

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

